# playground-lingua-franca

./: .gitignore  .gitmodules  .gitpod.yml  LICENSE  LICENSE.md  README.md  gui.py
.devcontainer/: devcontainer.json
.devcontainer/dev/: devcontainer.json
.devcontainer/nightly/: devcontainer.json
.devcontainer/stable/: devcontainer.json
.github/workflows/: check-devcontainer.yml  ci.yml
.metadata/: version.ini
.metadata/.plugins/de.cau.cs.kieler.klighd.ui.view/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 8.snap
.metadata/.plugins/org.eclipse.e4.ui.workbench.swt/: dialog_settings.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.tm.terminal.view.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
.metadata/.plugins/org.lflang.ui/: dialog_settings.xml
.metadata/.plugins/org.python.pydev.shared_ui/: dialog_settings.xml
.scripts/: get-lf-executable  setup-env.bash  setup-lf.bash
C/: README.md
C/src/: Deadline.lf  Delay.lf  MemoryHierarchySimulation.lf  PoissonProcess.lf  PortAbsentTest.lf  README.md  RockPaperScissors.lf  SleepingBarber.lf  Smokers.lf  Watchdog.lf
C/src/AnytimePrime/: AnytimePrime.lf
C/src/Autoware/: Autoware.lf
C/src/ChatApplication/: SimpleChat.lf  SimpleChatN.lf  SimpleChatN_with_sender.lf
C/src/Controller/: ResponseTime.lf  ResponseTime2.lf  ResponseTime3.lf
C/src/Deadline/: AnytimePrime.lf
C/src/DistributedDatabase/: FederatedDatabase.lf  ReplicatedDatabase.lf  (+2 more)
CCpp/src/: README.md
Python/: .project
Python/src-gen/Pac-Man/PacManWithBank/include/core/: CMakeLists.txt  mixed_radix.c  reactor_common.c  tag.c  trace.c
Python/src-gen/Pac-Man/PacManWithBank/include/core/federated/: federate.c  federate.h
Python/src-gen/Pac-Man/PacManWithBank/include/core/federated/RTI/: rti.h
Python/src-gen/Pac-Man/PacManWithBank/include/core/modal_models/: modes.c
Python/src-gen/Pac-Man/PacManWithBank/include/core/platform/: lf_unix_syscall_support.c  lf_windows_support.c
Python/src-gen/Pac-Man/PacManWithBank/include/core/threaded/: CMakeLists.txt  reactor_threaded.c  scheduler.h  scheduler_GEDF_NP_CI.c  scheduler_instance.h
Python/src-gen/Pac-Man/PacManWithBank/include/core/utils/: hashmap.h  pqueue.h  util.h
Rust/src/: CounterProgram.lf
TypeScript/src/: PortAbsentTest.lf  SimpleWebserver.lf
dockerfiles/: github-codespace.Dockerfile  gitpod-base.Dockerfile  lf-base.Dockerfile
examples/: README.md
examples/C/: Makefile  README.md
examples/C/src/led-matrix/lib/: CMakeLists.txt  lib.txt  ws2812.pio
examples/C/src/led-matrix/lib/src/: led_remapping.c  led_remapping.h  pins.h  ws2812.c  ws2812.h
examples/Cpp/: README.md
examples/Python/: Makefile  README.md
experiments/: README.md
include/api/: reaction_macros.h
include/core/: port.h
include/semiconductor_dataset_test/: Fase.h  semiconductor_dataset_test.h
semiconductor-dataset/: semiconductor_dataset_test.lf  wafer.csv
utils/dockerfiles/: github-codespace.Dockerfile  gitpod-base.Dockerfile  lf-base.Dockerfile
utils/scripts/: setup-env.bash  setup-lf.bash  setup-user-env.bash
(+1817 files in other folders)
